<resources>
    <string name="app_name">SweatWorks</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="list_item">list_item</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="search">Search</string>
    <string name="image">Image</string>
    <string name="favorites">Favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="usuarios">Users</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="nationality">nationality</string>
    <string name="state">state</string>
    <string name="city">city</string>
    <string name="telephone">telephone</string>
    <string name="email">email</string>


    //Agregado
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ViewPager">ViewPager</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="seleccionar">SELECCIONAR</string>
    <string name="todo">TODO</string>
    <string name="tv1">#</string>
    <string name="tv2">+/-</string>
    <string name="tvpj">PJ</string>
    <string name="tvpts">PTS</string>
    <string name="tvposiciones">POSICIONES</string>
    <string name="powered_by">Powered By</string>
    <string name="dharma">DHARMA</string>

    <string-array name="examples">
        <item>Hello</item>
        <item>Fading TextView</item>
    </string-array>


    <string-array name="spinner_fechas">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>

    //Spinner Launcher
    <string-array name="spinner_divisiones">
        <item>Primera División</item>
        <item>Segunda División</item>
    </string-array>


    //BOOM BUTTONS STRINGS
    <string name="simple_circle_button_example">Simple Circle Button Example</string>
    <string name="text_inside_circle_button_example">Text Inside Circle Button Example</string>
    <string name="text_outside_circle_button_example">Text Outside Circle Button Example</string>
    <string name="ham_button_example">Ham Button Example</string>
    <string name="square_and_piece_corner_radius_example">Square And Piece Corner Radius Example</string>
    <string name="boom_example">Boom Example</string>
    <string name="button_place_alignment_example">Button Place Alignment Example</string>
    <string name="order_example">Order Example</string>
    <string name="actionbar_example">ActionBar Example</string>
    <string name="tool_bar_example">ToolBar Example</string>
    <string name="draggable_example">Draggable Example</string>
    <string name="ease_example">Ease Example</string>
    <string name="listener_example">Listener Example</string>
    <string name="control_example">Control Example</string>
    <string name="share_example">Share Example</string>
    <string name="list_example">List Example</string>
    <string name="recycler_view_example">Recycler View Example</string>
    <string name="fragment_example">Fragment Example</string>
    <string name="change_boom_button_example">Change Boom Button Example</string>
    <string name="three_d_animation_example">3D Animation Example</string>
    <string name="custom_position_example">Custom Position Example</string>
    <string name="fade_views_example">Fade Views Example</string>
    <string name="orientation_example">Orientation Example</string>

    <string name="text_inside_circle_button_text_normal">Text Inside Circle Button(Normal)</string>
    <string name="text_inside_circle_button_text_highlighted">Text Inside Circle Button(Highlighted)</string>
    <string name="text_inside_circle_button_text_unable">Text Inside Circle Button(Unable)</string>

    <string name="text_outside_circle_button_text_normal">Text Outside Circle Button(Normal)</string>
    <string name="text_outside_circle_button_text_highlighted">Text Outside Circle Button(Highlighted)</string>
    <string name="text_outside_circle_button_text_unable">Text Outside Circle Button(Unable)</string>

    <string name="text_ham_button_text_normal">Ham Button Text(Normal)</string>
    <string name="text_ham_button_text_highlighted">Ham Button Text(Highlighted)</string>
    <string name="text_ham_button_text_unable">Ham Button Text(Unable)</string>
    <string name="text_ham_button_sub_text_normal">Ham Button Sub Text(Normal)</string>
    <string name="text_ham_button_sub_text_highlighted">Ham Button Sub Text(Highlighted)</string>
    <string name="text_ham_button_sub_text_unable">Ham Button Sub Text(Unable)</string>


</resources>



